# uniffi-bindgen-ruby

./: .gitignore  Cargo.toml  PLAN.md  PLAN_TEMPLATE.md  README.md
.github/workflows/: ci.yml
binding_tests/: README.md
crates/ubrg_bindgen/: Cargo.toml
crates/ubrg_bindgen/src/: cli.rs  lib.rs  main.rs
crates/ubrg_bindgen/src/ruby/: mod.rs
crates/ubrg_bindgen/tests/: golden_generated.rs
crates/ubrg_runtime/: Cargo.toml
crates/ubrg_runtime/src/: lib.rs
crates/ubrg_testing/: Cargo.toml
crates/ubrg_testing/src/: lib.rs
docs/: configuration.md  release.md  supported-features.md  testing.md
fixtures/simple/expected/: simple.rb
fixtures/simple/src/: simple.udl
scripts/: build_bindings.sh
